# DRFCourse

./: .coverage  .coveragerc  .env  .flake8  .gitignore  README.md  bot.py  docker-compose.yaml  manage.py  pyproject.toml  users.json
CourseDRF/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
habits/: admin.py  models.py  pagination.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py  0003_alter_habit_creator.py  0004_alter_habit_creator_alter_habit_frequency.py  0005_alter_habit_options_alter_habit_frequency.py  0006_alter_habit_treasure.py  0007_habit_pleasantness.py
users/: admin.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
users/management/commands/: csu.py  cu.py
users/migrations/: 0001_initial.py
